--- a/composer.json
+++ b/composer.json
@@ -8,7 +8,9 @@
         "php": "^8.0.2",
         "october/rain": "^3.6",
         "laravel/framework": "^9.0",
-        "october/all": "^3.6"
+        "october/all": "^3.6",
+        "fabpot/goutte": "^4.0",
+        "guzzlehttp/guzzle": "^7.8"
     },
     "require-dev": {
         "phpunit/phpunit": "^8.5|^9.0",
