Fix composer.json scripts

--- a/composer.json
+++ b/composer.json
@@ -49,6 +49,7 @@
         ],
         "project.install": [
             "composer install",
+            "if [ ! -f auth.json ]; then php artisan project:set; fi",
             "@php artisan october:migrate",
             "@project.generate.app_key",
             "@project.clear",
