--- a/.env.example
+++ b/.env.example
@@ -18,7 +18,7 @@ DEFAULT_FOLDER_MASK=775
 DB_CONNECTION=mysql
 DB_HOST=mysql
 DB_PORT=3306
-DB_DATABASE=database
+DB_DATABASE=app
 DB_USERNAME=root
 DB_PASSWORD=
 
