Add ChatGPT integration

--- a/.env.example
+++ b/.env.example
@@ -50,5 +50,6 @@ AWS_BUCKET=
 UID=1000
 GID=1000
 
+CHAT_GPT_URL=http://37.251.255.17:8001
 PARSER_QUEUE_PROCESSES=15
 PARSER_MIN_PAGE_CONTENT_SIZE=100
