--- a/plugins/blackseadigital/parser/models/page/fields.yaml
+++ b/plugins/blackseadigital/parser/models/page/fields.yaml
@@ -25,6 +25,14 @@ tabs:
             type: switch
             tab: Settings
             comment: 'Enable/disable sending data by page to the API.'
+        status_id:
+            label: Status
+            span: left
+            type: dropdown
+            options: getStatusIdsOptions
+            tab: Settings
+            disabled: true
+            required: true
         external_id:
             label: External id
             span: left
@@ -32,8 +40,24 @@ tabs:
             placeholder: External id
             tab: Settings
             disabled: true
+            required: true
+        document_id:
+            label: Document id
+            span: left
+            type: text
+            placeholder: Document id
+            tab: Settings
+            disabled: true
         parsed_at:
             label: Parsed at
+            span: left
+            type: datepicker
+            mode: datetime
+            tab: Settings
+            disabled: true
+            required: true
+        changed_at:
+            label: Changed at
             span: left
             type: datepicker
             mode: datetime
@@ -55,12 +79,13 @@ tabs:
             disabled: true
             required: true
         updated_at:
-            label: Created At
+            label: Updated At
             span: left
             type: datepicker
             mode: datetime
             tab: Settings
             disabled: true
+            required: true
         title:
             label: Title
             span: left
